--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -84,3 +84,40 @@ pre {
   background-color: #cc5229;
   margin-right: 5px;
 }
+
+
+.glossary {
+  border-width: 3px !important;
+  border-color: #8d0000 !important;
+  border-style: solid !important;
+}
+.line {
+  border-width: 1px !important;
+  border-color: #8d0000 !important;
+  border-style: solid !important;
+}
+.title {
+  font-size: 24px !important;
+  font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif !important;
+}
+.text {
+  font-size: 18px !important;
+  font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif !important;
+  color: #464646 !important;
+}
+.v-application .primary--text {
+  color: #8d0000 !important;
+  caret-color: #8d0000 !important;
+}
+.v-label.primary--text {
+  color: #8d0000 !important;
+  caret-color: #8d0000 !important;
+}
+.logo {
+  width: 75px;
+  height: 75px;
+  float: right;
+}
+.icon-color {
+  color: #cc5229;
+}
